added basic header structure, which will be used soon to clean up stuff.

--- a/IFS Tool/IFS Tool.vcxproj
+++ b/IFS Tool/IFS Tool.vcxproj
@@ -78,6 +78,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="IFS.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="Utils.h" />
   </ItemGroup>
