--- a/IFS Tool/IFS Tool.vcxproj.filters
+++ b/IFS Tool/IFS Tool.vcxproj.filters
@@ -17,6 +17,9 @@
     <ClInclude Include="Utils.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="IFS.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="IFS Tool.cpp">
